<resources>
    <string name="app_name">GenShelf</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_shelf">Shelf</string>
    <string name="home_like">Likes</string>
    <string name="home_library">Library</string>
    <string name="home_shops">Shops</string>
    <string name="home_social">Social</string>
    <string name="home_history">History</string>
    <string name="search">Search</string>

    <string name="setting">Setting</string>
    <string name="uninstall">Uninstall</string>
    <string name="install">Install</string>
    <string name="update">Update</string>

    <string name="start_install">Start install…</string>
    <string name="install_complete">Install complete</string>
    <string name="install_failed">Install failed</string>
    <string name="removed">Removed</string>

    <string name="shop">Shop</string>

    <string name="loading">Loading…</string>
    <string name="no_more">No more</string>

    <string name="collect">Collect</string>
    <string name="refresh">Refresh</string>
    <string name="confirm">Confirm</string>
    <string name="will_delete">Will delete "{0}"?</string>
    <string name="will_collect">Will collect "{0}"?</string>
    <string name="will_unlike">Will remove "{0}" from likes?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>

    <string name="goto_library">It is empty, goto library collect some?</string>
    <string name="goto_shops">It is empty, you can install one.</string>
    <string name="go">GO</string>
    <string name="collect_ok">Collect,OK!</string>

    <string name="will_upgrade">There is a new version of GenShelf, would you want to upgrade?</string>

    <string name="last">Last:</string>
    <string name="like_book">"{0}" is added to likes.</string>
    <string name="unlike_book">Removed from likes.</string>

    <string name="gen_downloading">Downloading</string>
    <string name="waiting">Loading…</string>
    <string name="complete">Complete</string>
    <string name="paused">Paused</string>
    <string name="failed">Failed</string>
    <string name="unkown">Unkown</string>
    <string name="topic_subtitle" formatted="false">%s/%s Comments:%d</string>

    <string name="title">Title</string>
    <string name="category_d">Category:</string>
    <string name="content">Content</string>

    <string name="require_title">Require a title!</string>
    <string name="require_content">Content is empty!</string>
    <string name="require_category">Not get category yet!</string>

    <string name="added_share">Already added to share list, click again to share.</string>
    <string name="no_shop">The select shop is not install, must install first.</string>
    <string name="unkown_shop">Unkown shop.</string>

    <string name="save">Save To Album</string>
    <string name="share">Share</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Comment…</string>
    <string name="post_topic">Post Topic</string>

    <string name="save_ok">Saved</string>
    <string name="save_failed">Not saved</string>
    <string name="save_not_ready">Picture not downloaded</string>

    <string name="output_zip">Save zip</string>

    <string name="will_remove_history">Remove all histories?</string>
    <string name="no_history">No history!</string>
</resources>
