<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/shelf"
            android:icon="@drawable/squares"
            android:title="@string/home_shelf" />
        <item
            android:id="@+id/library"
            android:icon="@drawable/home"
            android:title="@string/home_library" />
        <item
            android:id="@+id/settins"
            android:icon="@drawable/list"
            android:title="@string/home_shops" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/clock"
            android:title="@string/home_history" />
        <item
            android:id="@+id/social"
            android:icon="@drawable/share"
            android:title="@string/home_social"/>
    </group>

</menu>
