<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.gen.gsv2.controllers.PostTopicController">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_d"/>
            <Button
                android:id="@+id/category_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="45dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:hint="@string/content"
                    android:gravity="top"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="right"
                android:layout_alignParentBottom="true"
                android:weightSum="1">

                <ImageButton
                    android:id="@+id/books_button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="43dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/book"
                    android:tint="@color/blue" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <cn.gen.gsv2.views.TouchPanel
        android:id="@+id/drawer_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40000000">
    </cn.gen.gsv2.views.TouchPanel>
    <cn.gen.gsv2.views.TouchPanel
        android:id="@+id/loading_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="#40000000">
    </cn.gen.gsv2.views.TouchPanel>
    <RelativeLayout
        android:id="@+id/drawer"
        android:layout_width="140dp"
        android:layout_height="match_parent"
        android:background="#fff"
        android:layout_alignParentRight="true">
        <ListView
            android:id="@+id/books_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </RelativeLayout>
</RelativeLayout>
